Регулярка для парсинга количества повторений для завершения напоминания